Fix style for text-align center

--- a/static/css/main_create.css
+++ b/static/css/main_create.css
@@ -140,6 +140,7 @@ body {
 
 input, select {
     font-family: 'Noto Sans KR';
+    text-align: center;
 }
 
 input[type="text"], select {
